added minor to h1 principal

--- a/lotofjuice/src/main/resources/templates/index.html
+++ b/lotofjuice/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1>el titulo de la paginas</h1>
+<h1>el titulo de la paginas o principal</h1>
 <h2>el subtitulo veinte y dos</h2>
 </body>
 </html>
